# smart_home

./: .gitignore  main.py  ngrok.bash  pyproject.toml  webapp.py
chatgpt/: chat.py
recognition/: recognition.py
templates/: live.html
