[tool.poetry]
name = "camera"
version = "0.1.0"
description = ""
authors = ["Mohammad Khodashahi <mohammadhassan.khodashahi@obi.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.7.0.72"
pyobjc = "9"
face-recognition = "^1.3.0"
openai = "^0.27.8"
fastapi = "^0.99.1"
jinja2 = "^3.1.2"
uvicorn = "^0.22.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

